[package]
name = "bboard"
version = "0.1.0"
authors = ["westdabestdb <westownzyou@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0.0-beta.3"
actix = "0.10.0-alpha.3"
actix-web-actors = "3.0.0-beta.1"
serde = "1.0.115"
serde_json = "1.0.57"
uuid = "0.8.1"
actix-rt = "1.1.1"
actix-cors = "0.2.0"
log = "0.4.0"
env_logger = "0.7.1"
dotenv = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }
openssl = "0.10"